@@ -4,6 +4,7 @@
 	* Add support for local configuration file
 	* Add option to disable settings button, load option from XML page feed file
 	* Fix crash on help screen
+	* Show CurlyTx in plugin browser
 	* Version 1.1.0
 
 2011-12-06  Christian Weiske  <cweiske@cweiske.de>
